--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -35,8 +35,8 @@
         </div>
         <div class="text">
             <h4> Hy sir I am Roshan patel</h4>
-            <h1 id="center">from me to My Favourite sir: Bijya sir </h1>
-            <h4 id="padding">My favourite teacher, bijya sir, is a great source of inspiration.
+            <h1 id="center">from me to My Favourite sir: Gulshan sir </h1>
+            <h4 id="padding">My favourite teacher, Gulshan sir, is a great source of inspiration.
                  He is kind, knowledgeable, and always dedicated to his students.
                  His method of teaching makes learning interesting and easy to understand.
                  He encourages us to ask questions and think critically.
